<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.kdp.starbarcode.view.BarCodePreview
        android:id="@+id/barcodepreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.starbarcode.sample.view.ScanView
        android:id="@+id/scanview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/btn_start_recognize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/start_spot"/>

    <Button
        android:id="@+id/btn_stop_recognize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/btn_start_recognize"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/stop_spot"/>

    <Button
        android:id="@+id/btn_turn_on_flash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/btn_stop_recognize"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/turn_on_flashlight"/>
    <Button
        android:id="@+id/btn_turn_off_flash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_turn_on_flash"
        android:text="@string/turn_off_flashlight"/>

    <Button
        android:id="@+id/btn_turn_on_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_start_recognize"
        android:text="@string/turn_on_camera"/>

    <Button
        android:id="@+id/btn_turn_off_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_start_recognize"
        app:layout_constraintLeft_toRightOf="@+id/btn_turn_on_camera"
        android:text="@string/turn_off_camera"/>
    <Button
        android:id="@+id/btn_start_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_turn_on_flash"
        app:layout_constraintLeft_toRightOf="@+id/btn_turn_off_camera"
        android:text="@string/start_preview"
        />
    <Button
        android:id="@+id/btn_stop_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_turn_off_flash"
        app:layout_constraintLeft_toRightOf="@+id/btn_start_preview"
        android:text="@string/stop_preview"
        />

</android.support.constraint.ConstraintLayout>